--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 chatGPT
 一、学习材料
   1.入门：https://github.com/yzfly/awesome-chatgpt-zh#%E4%B8%8E-chatgpt-%E9%AB%98%E6%95%88%E5%AF%B9%E8%AF%9Dprompt%E5%B7%A5%E7%A8%8B%E6%8C%87%E5%8D%97
+  2.凯波写的文档：https://mp.weixin.qq.com/s/l77NfoyIphe2Gc8G0x0OQw
